--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "main", "master" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -19,10 +17,15 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    # Thay vì dùng ./gradlew, ta dùng lệnh 'gradle' có sẵn của máy ảo GitHub
-    - name: Build with Gradle
-      run: gradle shadowJar 
+    # Sử dụng Gradle 8.10 thay vì bản 9.x để đảm bảo tính tương thích cao nhất
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        gradle-version: 8.10
 
+    - name: Build with Gradle
+      run: gradle build
+      
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
