--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,16 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    # Sử dụng Gradle 8.10 thay vì bản 9.x để đảm bảo tính tương thích cao nhất
+    # Sử dụng Gradle 8.10 (Hỗ trợ hoàn hảo cho Java 21)
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
         gradle-version: 8.10
 
+    # Chạy lệnh build trực tiếp qua Gradle vừa cài đặt
     - name: Build with Gradle
-      run: gradle build
-      
+      run: gradle shadowJar 
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
